--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,7 @@ report/test/summary/neko/summary.txt
 src/test/ExampleTest.hx
 src/test/TestMain.hx
 src/test/TestSuite.hx
+bin/flash/haxe/DefaultAssetLibrary.hx
+bin/test/js_test.js
+report/test-runner/js.html
+report/test-runner/js_test.js
