--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,5 @@ bin/test/js_test.js
 report/test-runner/js.html
 report/test-runner/js_test.js
 report/test/summary/js/summary.txt
+bin/windows/neko/bin/manifest
+bin/windows/neko/haxe/DefaultAssetLibrary.hx
